[package]
name = "dtube-pinner"
version = "0.0.0"
authors = ["Thomas Heck <t@b128.net>"]

[dependencies]
steemit-api = { path = ".." }
futures = "0.1.18"
tokio-core = "0.1.12"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
toml = "0.4.5"
ipfs-api = "0.4.0-alpha.2"

[[bin]]
name = "dtube-pinner"
path = "main.rs"
